# mate-icon-theme-faenza

./: AUTHORS  ChangeLog  Makefile.am  NEWS  README  autogen.sh  configure.ac
matefaenza/: index.theme
matefaenza/apps/32/: google.xpm
matefaenza/apps/48/: google.xpm
matefaenzadark/: index.theme
matefaenzagray/: index.theme  index.theme~
matefaenzagray/actions/16/: lock.xpm  top.xpm
matefaenzagray/actions/22/: lock.xpm  top.xpm
matefaenzagray/actions/24/: lock.xpm  top.xpm
matefaenzagray/actions/32/: lock.xpm  top.xpm
matefaenzagray/actions/48/: lock.xpm  top.xpm
matefaenzagray/status/22/: locked.xpm
matefaenzagray/status/24/: locked.xpm
