dnl Process this file with autoconf to produce a configure script.
AC_PREREQ(2.53)

AC_INIT([mate-icon-theme-faenza], [1.7.0], [http://www.mate-desktop.org])
AC_CONFIG_SRCDIR([matefaenza/index.theme])

AM_INIT_AUTOMAKE([1.9 tar-ustar foreign no-dist-gzip dist-xz])

AC_CONFIG_FILES([
Makefile
])

AC_OUTPUT
